--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@formspree/react": "^3.0.0",
     "framer-motion": "^12.27.1",
     "lenis": "^1.3.17",
-    "next": "16.1.3",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
